fix: layout issue of loading component on product page

--- a/src/components/product-page-loader/styles.module.scss
+++ b/src/components/product-page-loader/styles.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
   width: 100%;
   background: black;
+  margin-top: 50px;
 }
